docs/7.57/md/abencorresponding_abexas.md
---
title: "Assigning Components, Examples"
description: |
  !Example(exa.gif 'Example') MOVE-CORRESPONDING for Structures(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_corresponding_struc_abexa.htm) !Example(exa.gif 'Example') MOVE-CORRESPONDING for Internal Tables(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenm
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_abexas.htm"
abapFile: "abencorresponding_abexas.htm"
keywords: ["do", "if", "data", "internal-table", "abencorresponding", "abexas"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_assignments.htm) →  [Assigning Structure Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Assigning Components, Examples, ABENCORRESPONDING_ABEXAS, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Assigning Components, Examples

Continue
![Example](exa.gif "Example") [MOVE-CORRESPONDING for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_corresponding_struc_abexa.htm)
![Example](exa.gif "Example") [MOVE-CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_corresponding_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_struct_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_itab_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Table Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_table_exp_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_using_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Reflexive Assignment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_using_self_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Mapping Rule](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_mapping_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Handling Duplicates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_duplicates_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Nested Mapping Rule](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_deep_mapp_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Comparison with FOR Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_vs_for_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Simple Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_dyn_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Nested Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_struc_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_itab_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Tabular Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_deep_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING with Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_lookup_abexa.htm)
![Example](exa.gif "Example") [Reflexive Component Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreflexive_corresponding_abexa.htm)
![Example](exa.gif "Example") [Variants of MOVE-CORRESPONDING and the CORRESPONDING Operator Using Deep Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_variants_s_abexa.htm)